src/test/deca/context/invalid/bge_boolean_bge_boolean.deca
// Description :
// 
//      Test syntaxiquement incorrect de true>=true
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = true>=true;
}

